[tool.poetry]
name = "dockerbuild"
version = "1.0.1"
description = "Fast, staged Debian package builds"
authors = ["Jens John <dev@2ion.de>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
docker = "^4.3.1"
python-debian = "^0.1.38"
pygithub = "^1.53"
requests = "^2.24.0"

[tool.poetry.scripts]
dockerbuild = 'dockerbuild.cli:main'


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
